--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,24 @@
 name: edge_tts_dart
-description: A Dart port of the edge-tts library for accessing Microsoft Edge's online text-to-speech service.
+description: A Dart port of the edge-tts library for accessing Microsoft Edge's online text-to-speech service. Works with Flutter and pure Dart applications.
 version: 0.1.0
-homepage: https://github.com/example/edge_tts_dart # TODO: Replace with your actual repository URL
-repository: https://github.com/example/edge_tts_dart # TODO: Replace with your actual repository URL
-issue_tracker: https://github.com/example/edge_tts_dart/issues # TODO: Replace with your actual repository URL
+homepage: https://github.com/twn39/edgetts-dart
+repository: https://github.com/twn39/edgetts-dart
+issue_tracker: https://github.com/twn39/edgetts-dart/issues
+documentation: https://github.com/twn39/edgetts-dart#readme
 topics:
   - tts
   - text-to-speech
   - microsoft-edge
   - speech
   - audio
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
